<resources>
    <string name="app_name">Spendy</string>


    //Sign Up
    <string name="txtName">Name</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtSurname">Surname</string>
    <string name="txtEMail">E-Mail</string>
    <string name="txtPassword">Password</string>
    <string name="txtPasswordConfirm">Confirm Password</string>

    <string name="btnSignUp">Sign Up</string>
    <string name="btnSignIn">Sign In</string>
    <string name="title_activity_tab_statistics">ActivityTabStatistics</string>
    <string name="tab_text_1">Expense</string>
    <string name="tab_text_2">Income</string>
    <string name="btnSendEmail">Send E-Mail</string>
    <string name="tvForgotPassword">Forgot Password?</string>
    <string name="cbAccept">I have accepted Terms And Conditions</string>
    <string name="tvCategory">Category Name</string>
    <string name="btnIncome">Income</string>
    <string name="btnExpense">Expense</string>
    <string name="hintAmount">      Enter Amount…</string>
    <string name="tvTotal">  TOTAL $</string>
    <string name="tvTime"> Time</string>
    <string name="MenuHome">Homepage</string>
    <string name="MenuBudget">Budget Manager</string>
    <string name="MenuSettings">Settings</string>
    <string name="MenuLogout">Log Out</string>




    //Sign In Page
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint"> Password</string>
    <string name="email_hint"> E-Mail</string>
    <string name="sign_up_with_email"> Sign Up with E-Mail?</string>
    <string name="sign_in"> Sign In</string>

    //Category CardView
    <string name="tv_category_name">Category Name</string>


    //Expense-Income CardView
    <string name="tv_expense">EXPENSE</string>
    <string name="tv_income">INCOME</string>
    <string name="tv_total">TOTAL</string>

    //Forgot Password Dialog
    <string name="forgot_password_dialog_hint">Enter Your E-Mail</string>

    //Expense-Income Fragment
    <string name="tv_total_currency">TOTAL</string>
    <string name="tv_enter_amount">Please Enter an Amount</string>

    //Expense-Income Fragment
    <string name="tv_nav_header">Spendy</string>


    //Sign Up Verification
    <string name="empty_email_error">Please Enter Your E-Mail</string>
    <string name="empty_name_error">Please Enter Your Name</string>
    <string name="empty_surname_error">Please Enter Your Surname</string>
    <string name="empty_password_error">Please Enter Your Password</string>
    <string name="empty_password_confirm_error">Please Confirm Your Password</string>

    <string name="email_validation_error">Please Enter a Valid Email</string>
    <string name="password_match_error">Passwords did not Match</string>
    <string name="password_not_valid_error">Password must be min 6 character!</string>


    //Categories
    <string name="no_category">No Category"</string>
    <string name="book">BOOK</string>
    <string name="car">CAR</string>
    <string name="child">CHILD</string>
    <string name="clothes">CLOTHES</string>
    <string name="cosmetic">COSMETIC</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="donation">DONATION</string>
    <string name="dues">DUES</string>
    <string name="education">EDUCATION</string>
    <string name="electricity">ELECTRICITY</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="food">FOOD</string>
    <string name="health">HEALTH</string>
    <string name="heat">HEAT</string>
    <string name="house">HOUSE</string>
    <string name="insurance">INSURANCE</string>
    <string name="internet">INTERNET</string>
    <string name="invoice">INVOICE</string>
    <string name="market">MARKET</string>
    <string name="pet">PET</string>
    <string name="rental_fee">RENTAL FEE</string>
    <string name="salary">SALARY</string>
    <string name="sales">SALES</string>
    <string name="telephone">TELEPHONE</string>
    <string name="transportation">TRANSPORTATION</string>
    <string name="travel">TRAVEL</string>
    <string name="tv">TV</string>
    <string name="water">WATER</string>

    //Homepage Navigator
    <string name="homepage">Homepage</string>
    <string name="budget_manager">Budget Manager</string>
    <string name="statistics">Statistics</string>
    <string name="log_out">Log Out</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="german">German</string>

    //Toolbar
    <string name="tb_homepage">Homepage</string>

    //Category
    <string name="select_category">Select Category</string>

    //piechart
    <string name="balance">Balance</string>



</resources>