...

        android:onClick="onForgotButtonPressed"
        android:text="@string/forgot_password"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogle"
        android:layout_width="126dp"
        android:layout_height="41dp"

...
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledEmail"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
...
        app:layout_constraintTop_toBottomOf="@+id/ivUserLogo"
        app:layout_constraintVertical_bias="0.153">


        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

...
